automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
     "\n",
     "print(type(macbeth))\n",
     "print(len(macbeth))\n",
-    "print(macbeth[:500])"
+    "print(macbeth[0:500])"
    ]
   },
   {
