--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,116 @@
       "\r\n",
       "Please take a look at the important information in this header.\r\n",
       "We encourage you to keep this file on your own disk, keeping an\r\n",
-      "electronic path open for the nex\n"
+      "electronic path open for the next readers.  Do not remove this.\r\n",
+      "\r\n",
+      "\r\n",
+      "**Welcome To The World of Free Plain Vanilla Electronic Texts**\r\n",
+      "\r\n",
+      "**Etexts Readable By Both Humans and By Computers, Since 1971**\r\n",
+      "\r\n",
+      "*These Etexts Prepared By Hundreds of Volunteers and Donations*\r\n",
+      "\r\n",
+      "Information on contacting Project Gutenberg to get Etexts, and\r\n",
+      "further information is included below.  We need your donations.\r\n",
+      "\r\n",
+      "\r\n",
+      "The Tragedie of Macbeth\r\n",
+      "\r\n",
+      "by William Shakespeare\r\n",
+      "\r\n",
+      "July, 2000  [Etext #2264]\r\n",
+      "\r\n",
+      "\r\n",
+      "***The Project Gutenberg's Etext of Shakespeare's First Folio***\r\n",
+      "********************The Tragedie of Macbeth*********************\r\n",
+      "\r\n",
+      "*****This file should be named 2264.txt or 2264.zip******\r\n",
+      "\r\n",
+      "Project Gutenberg Etexts are usually created from multiple editions,\r\n",
+      "all of which are in the Public Domain in the United States, unless a\r\n",
+      "copyright notice is included.  Therefore, we usually do NOT keep any\r\n",
+      "of these books in compliance with any particular paper edition.\r\n",
+      "\r\n",
+      "\r\n",
+      "We are now trying to release all our books one month in advance\r\n",
+      "of the official release dates, leaving time for better editing.\r\n",
+      "\r\n",
+      "Please note:  neither this list nor its contents are final till\r\n",
+      "midnight of the last day of the month of any such announcement.\r\n",
+      "The official release date of all Project Gutenberg Etexts is at\r\n",
+      "Midnight, Central Time, of the last day of the stated month.  A\r\n",
+      "preliminary version may often be posted for suggestion, comment\r\n",
+      "and editing by those who wish to do so.  To be sure you have an\r\n",
+      "up to date first edition [xxxxx10x.xxx] please check file sizes\r\n",
+      "in the first week of the next month.  Since our ftp program has\r\n",
+      "a bug in it that scrambles the date [tried to fix and failed] a\r\n",
+      "look at the file size will have to do, but we will try to see a\r\n",
+      "new copy has at least one byte more or less.\r\n",
+      "\r\n",
+      "\r\n",
+      "Information about Project Gutenberg (one page)\r\n",
+      "\r\n",
+      "We produce about two million dollars for each hour we work.  The\r\n",
+      "time it takes us, a rather conservative estimate, is fifty hours\r\n",
+      "to get any etext selected, entered, proofread, edited, copyright\r\n",
+      "searched and analyzed, the copyright letters written, etc.  This\r\n",
+      "projected audience is one hundred million readers.  If our value\r\n",
+      "per text is nominally estimated at one dollar then we produce $2\r\n",
+      "million dollars per hour this year as we release thirty-six text\r\n",
+      "files per month, or 432 more Etexts in 1999 for a total of 2000+\r\n",
+      "If these reach just 10% of the computerized population, then the\r\n",
+      "total should reach over 200 billion Etexts given away this year.\r\n",
+      "\r\n",
+      "The Goal of Project Gutenberg is to Give Away One Trillion Etext\r\n",
+      "Files by December 31, 2001.  [10,000 x 100,000,000 = 1 Trillion]\r\n",
+      "This is ten thousand titles each to one hundred million readers,\r\n",
+      "which is only ~5% of the present number of computer users.\r\n",
+      "\r\n",
+      "At our revised rates of production, we will reach only one-third\r\n",
+      "of that goal by the end of 2001, or about 3,333 Etexts unless we\r\n",
+      "manage to get some real funding; currently our funding is mostly\r\n",
+      "from Michael Hart's salary at Carnegie-Mellon University, and an\r\n",
+      "assortment of sporadic gifts; this salary is only good for a few\r\n",
+      "more years, so we are looking for something to replace it, as we\r\n",
+      "don't want Project Gutenberg to be so dependent on one person.\r\n",
+      "\r\n",
+      "We need your donations more than ever!\r\n",
+      "\r\n",
+      "\r\n",
+      "All donations should be made to \"Project Gutenberg/CMU\": and are\r\n",
+      "tax deductible to the extent allowable by law.  (CMU = Carnegie-\r\n",
+      "Mellon University).\r\n",
+      "\r\n",
+      "For these and other matters, please mail to:\r\n",
+      "\r\n",
+      "Project Gutenberg\r\n",
+      "P. O. Box  2782\r\n",
+      "Champaign, IL 61825\r\n",
+      "\r\n",
+      "When all other email fails. . .try our Executive Director:\r\n",
+      "Michael S. Hart <hart@pobox.com>\r\n",
+      "hart@pobox.com forwards to hart@prairienet.org and archive.org\r\n",
+      "if your mail bounces from archive.org, I will still see it, if\r\n",
+      "it bounces from prairienet.org, better resend later on. . . .\r\n",
+      "\r\n",
+      "We would prefer to send you this information by email.\r\n",
+      "\r\n",
+      "******\r\n",
+      "\r\n",
+      "To access Project Gutenberg etexts, use any Web browser\r\n",
+      "to view http://promo.net/pg.  This site lists Etexts by\r\n",
+      "author and by title, and includes information about how\r\n",
+      "to get involved with Project Gutenberg.  You could also\r\n",
+      "download our past Newsletters, or subscribe here.  This\r\n",
+      "is one of our major sites, please email hart@pobox.com,\r\n",
+      "for a more complete list of our various sites.\r\n",
+      "\r\n",
+      "To go directly to the etext collections, use FTP or any\r\n",
+      "Web browser to visit a Project Gutenberg mirror (mirror\r\n",
+      "sites are available on 7 continents; mirrors are listed\r\n",
+      "at http://promo.net/pg).\r\n",
+      "\r\n",
+      "Mac users, do NOT point and click, typing works bette\n"
      ]
     }
    ],
@@ -64,7 +173,7 @@
     "\n",
     "print(type(macbeth))\n",
     "print(len(macbeth))\n",
-    "print(macbeth[0:500])"
+    "print(macbeth[0:5000])"
    ]
   },
   {
