--- a/index.ipynb
+++ b/index.ipynb
@@ -169,11 +169,12 @@
    ],
    "source": [
     "import requests\n",
+    "import \n",
     "macbeth = requests.get('http://www.gutenberg.org/cache/epub/2264/pg2264.txt').text\n",
     "\n",
     "print(type(macbeth))\n",
     "print(len(macbeth))\n",
-    "print(macbeth[0:5000])"
+    "print(macbeth[0:5000])\n"
    ]
   },
   {
