automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -169,12 +169,13 @@
    ],
    "source": [
     "import requests\n",
-    "import \n",
+    "import pandas\n",
     "macbeth = requests.get('http://www.gutenberg.org/cache/epub/2264/pg2264.txt').text\n",
     "\n",
     "print(type(macbeth))\n",
     "print(len(macbeth))\n",
-    "print(macbeth[0:5000])\n"
+    "print(macbeth[0:5000])\n",
+    "pandas.to_txt(m)"
    ]
   },
   {
