automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
     "print(type(macbeth))\n",
     "print(len(macbeth))\n",
     "print(macbeth[0:5000])\n",
-    "pandas.to_txt(m)"
+    "pandas.to_txt(macbeth)"
    ]
   },
   {
