automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,6 +175,7 @@
     "print(type(macbeth))\n",
     "print(len(macbeth))\n",
     "print(macbeth[0:5000])\n",
+    "file = open(macbeth)\n",
     "pandas.to_txt(macbeth)"
    ]
   },
