automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,8 @@
     "print(type(macbeth))\n",
     "print(len(macbeth))\n",
     "print(macbeth[0:5000])\n",
-    "file = open(macbeth.txt, \"w\")\n",
+    "file = open(\"macbeth.txt\", \"w\")\n",
+    "file.write(m)\n",
     "pandas.to_txt(macbeth)"
    ]
   },
