automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,8 +176,8 @@
     "print(len(macbeth))\n",
     "print(macbeth[0:5000])\n",
     "file = open(\"macbeth.txt\", \"w\")\n",
-    "file.write(m)\n",
-    "pandas.to_txt(macbeth)"
+    "file.write(macbeth)\n",
+    "file.close"
    ]
   },
   {
